# contact-list-interview

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test_data.csv  test_data_big.csv
contact_list_interview/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
contactlist/: admin.py  apps.py  forms.py  models.py  tasks.py  validators.py  views.py
contactlist/migrations/: 0001_initial.py  0002_remove_contactlist_user.py
contactlist/templates/: contact_list.html  home.html  success.html
