[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Joachim Hodana", email = "stylek777@gmail.com"},
]
dependencies = [
    "django>=5.0",
    "django-storages[s3]>=1.14.2",
    "psycopg-binary>=3.1.16",
    "django-environ>=0.11.2",
    "dj-database-url>=2.1.0",
    "celery>=5.3.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

